--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   # fonts:
+  fonts:
     - family: Satoshi
       fonts:
         - asset: assets/fonts/Satoshi-Black.ttf
