--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.17
   flutter_bloc: ^9.1.0
+  hydrated_bloc: ^10.0.0
 
 dev_dependencies:
   flutter_test:
