--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.1.0
   hydrated_bloc: ^10.0.0
   path_provider: ^2.1.5
+  firebase_core: ^3.12.1
 
 dev_dependencies:
   flutter_test:
