--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   path_provider: ^2.1.5
   firebase_core: ^3.12.1
   firebase_auth: ^5.5.1
+  cloud_firestore: ^5.6.5
 
 dev_dependencies:
   flutter_test:
