--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_auth: ^5.5.1
   cloud_firestore: ^5.6.5
   get_it: ^8.0.3
+  dartz: ^0.10.1
+  just_audio: ^0.9.46
 
 dev_dependencies:
   flutter_test:
